fix: added flex-wrap: nowrap to make sure the button stays on the same line

--- a/descendence/src/app/chat/chat-client/chat.component.scss
+++ b/descendence/src/app/chat/chat-client/chat.component.scss
@@ -86,6 +86,9 @@
   background: #1C768F;
   height: 40px;
   border-radius: 0px 0px 10px 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .input {
